# hr-ontology

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  validation_report.md
config/: company_profile.py  settings.py
phase1_synthetic_data/: orchestrator.py
phase1_synthetic_data/generators/: ats_generator.py  base_generator.py  compensation_generator.py  distributions.py  hris_generator.py  performance_generator.py  shared_state.py  temporal.py
phase2_data_lake/: lake_builder.py  quality_checks.py  schema_registry.py  test_views.py
phase2_data_lake/queries/: cross_system_views.sql
phase3_ontology/: constraints.py  hr_ontology.ttl  mapping.py  relations.py  schema.py
phase4_graph/analytics/: centrality.py  community_detection.py  path_analysis.py
phase4_graph/loader/: edge_loader.py  load_orchestrator.py  neo4j_connection.py  node_loader.py
phase4_graph/visualization/: pyvis_renderer.py  style_config.py
phase5_ai_interface/: app.py  claude_agent.py
phase5_ai_interface/pages/: 1_Dashboard.py  2_Employee_Explorer.py
phase5_ai_interface/prompts/: example_queries.py  system_prompt.py
phase5_ai_interface/tools/: cypher_tools.py  duckdb_tools.py  ego_graph.py  employee_queries.py  ontology_tools.py  visualization_tools.py
tasks/: todo.md
tests/: test_validation.py
