[project]
name = "hr-ontology"
version = "0.1.0"
description = "HR Knowledge Graph & Ontology System"
requires-python = ">=3.11"
dependencies = [
    "faker>=25.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "neo4j>=5.19",
    "networkx>=3.3",
    "rdflib>=7.0",
    "pyvis>=0.3.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "streamlit>=1.35",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "phase1_synthetic_data",
    "phase2_data_lake",
    "phase3_ontology",
    "phase4_graph",
    "phase5_ai_interface",
]
